tests/baselines/reference/emitClassDeclarationWithThisKeywordInES6.errors.txt
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithThisKeywordInES6.ts(15,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithThisKeywordInES6.ts (1 errors) ====
    class B {
        x = 10;
        constructor() {
            this.x = 10;
        }
        static log(a: number) { }
        foo() {
            B.log(this.x);
        }
    
        get X() {
            return this.x;
        }
    
        set bX(y: number) {
            ~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
            this.x = y;
        }
    }